[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.doks]
auto = true

[tool.poetry]
authors = ["Tom Ritchford <tom@swirly.com>"]
description = "🗂 Take the edge off `dataclass` 🗂"
homepage = "https://github.com/rec/datacls"
name = "datacls"
readme = "README.md"
repository = "https://github.com/rec/datacls"
version = "4.7.1"
documentation = "https://rec.github.io/datacls"

[tool.poetry.dependencies]
dtyper = ">=2.5.0"
python = ">=3.8"
xmod = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
mypy = "*"
ruff = "*"

[tool.coverage.run]
branch = true
source = ["datacls"]

[tool.coverage.report]
fail_under = 96
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if False:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
