[project]
name = "datacls"
version = "4.10.0"
description = "🗂 Take the edge off `dataclass` 🗂"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = [
    "dtyper>=2.5.0",
    "xmod",
]

[project.urls]
Homepage = "https://github.com/rec/datacls"
Repository = "https://github.com/rec/datacls"
Documentation = "https://rec.github.io/datacls"

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "ruff",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.coverage.run]
branch = true
source = ["datacls"]

[tool.coverage.report]
fail_under = 96
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "datacls"
version = "4.10.0"
description = "🗂 Take the edge off `dataclass` 🗂"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
